# NeuroClaw

./: .gitignore  LICENSE  README.md  README_zh.md  SOUL.md  SOUL_BENCHMARK.md  SOUL_BENCHMARK_NO_SKILL.md  USER.md  pyproject.toml
.github/workflows/: test.yml
core/: __init__.py
core/agent/: __init__.py  demo_reflexion.py  main.py  reflexion.py  test_reflexion.py
core/checkpoint/: __init__.py  manager.py  test_checkpoint.py
core/config/: features.json
core/knowledge_graph/: __init__.py  phase1.py  phase2.py  phase3.py  phase4.py
core/llm/: __init__.py  provider_profiles.py
core/memory/: __init__.py  extractor.py  store.py  test_memory.py
core/scripts/: case1_enrich_roi_labels.py  case1_exhaustive_full.py  case1_exhaustive_v1.py  case1_exhaustive_v2.py  case1_method_comparison.py  download_openneuro_anat.py  extract_tcp_fastsurfer_volumes.py  run_fastsurfer_segonly_batch.py
core/web/: server.py  (+1 more)
desktop/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js  runtime-requirements.txt
docs/: faq-zh.html  faq.html  get-started-zh.html  get-started.html  index-zh.html  index.html  neuro-oracle-zh.html  neuro-oracle.html  neurobench-zh.html  neurobench.html  neuromap-zh.html  neuromap.html  styles.css
installer/: config_wizard.py  install_agent_integration.py  neuro_defaults.json  setup.py
models/: train_unified.py
neuro_bench/: README.md
neurobench/: README.md  task_atlas.json
neurooracle/: PHASE2_RERUN_PLAN.md  __init__.py  phase1.py  phase2.py  phase3.py  phase4.py  replay_claims_to_kg.py  run_case_study.sh  run_cycle.sh
(+648 files in other folders)
