[project]
name = "neuroclaw"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = [
    "core*",
    "models*",
    "neurooracle*",
]

[tool.pytest.ini_options]
testpaths = [
    "core/checkpoint",
    "neurooracle/tests",
    "core/skill_loader",
    "core/session",
    "core/subagent",
    "skills/method-design/scripts",
]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
